--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,4 +28,16 @@ jobs:
       -  name: Setup Node.js environment
          uses: actions/setup-node@v2.5.1
          with:
-             version: 16
+             version: node-version
+      - name: GitHub Action for Yarn
+        uses: Borales/actions-yarn@v2.3.0
+         with:
+    # Yarn command
+           cmd: install
+    - name: Creating Build
+      run: yarn build
+    - name: installing surge
+      run: npm install -g surge
+      
+    - name: deploying on surge
+      run:  surge ./build http://ahsan_react1.surge.sh/ --token ${{secrets.SURGE_TOKEN}}
