--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
       -  name: Setup Node.js environment
          uses: actions/setup-node@v2.5.1
          with:
-             version: node-version
+             node-version: '16'
       - name: GitHub Action for Yarn
         uses: Borales/actions-yarn@v2.3.0
         with:
