--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,7 @@ jobs:
         with:
          cmd: install
       - name: Creating Build
-        run: yarn build
+        run: npm run build
       - name: installing surge
         run: npm install -g surge
       
