--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,10 +35,7 @@ jobs:
           cmd: install # will run `yarn install` command
       - uses: borales/actions-yarn@v2.3.0
         with:
-          cmd: build # will run `yarn build` command
-      - uses: borales/actions-yarn@v2.3.0
-        with:
-          cmd: test # will run `yarn test` command
+          cmd: build yarn # will run `yarn build` command
       - name: installing surge
         run: npm install -g surge
       
